// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActiveUsers /> should render correctly 1`] = `
<div>
  <h6
    class="pf-v6-c-content--h6 pf-v6-u-mt-0"
    data-ouia-component-id="OUIA-Generated-Content-1"
    data-ouia-component-type="PF6/Content"
    data-ouia-safe="true"
    data-pf-content="true"
  >
    These are all of the users in your Red Hat organization. 
  </h6>
</div>
`;

exports[`<ActiveUsers /> should render correctly with link description 1`] = `
<div>
  <h6
    class="pf-v6-c-content--h6 pf-v6-u-mt-0"
    data-ouia-component-id="OUIA-Generated-Content-2"
    data-ouia-component-type="PF6/Content"
    data-ouia-safe="true"
    data-pf-content="true"
  >
    These are all of the users in your Red Hat organization. 
  </h6>
</div>
`;

exports[`<ActiveUsers /> should render correctly with link title 1`] = `
<div>
  <h6
    class="pf-v6-c-content--h6 pf-v6-u-mt-0"
    data-ouia-component-id="OUIA-Generated-Content-3"
    data-ouia-component-type="PF6/Content"
    data-ouia-safe="true"
    data-pf-content="true"
  >
    These are all of the users in your Red Hat organization. 
  </h6>
</div>
`;
